# MVTX_FELIX

./: CMakeLists.txt  LICENSE  README.md  daq_device_felix.cc  daq_device_felix.h  felixTriggerHandler.cc  felixTriggerHandler.h  felix_plugin.cc  felix_plugin.h  flxdefs.h  setup.sh  setup_felix_rcdaq.sh
test/: test_felix.cc
